# Trading-Microstructure-Engine

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
backtest/: pyproject.toml
backtest/src/backtest/: __init__.py  api.py  coach.py  journal.py
backtest/tests/: test_api.py  test_coach.py  test_integration.py  test_journal.py
dashboard/: README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/journal/: page.tsx
dashboard/src/components/: AnalysisPanel.test.tsx  AnalysisPanel.tsx  EntryForm.test.tsx  EntryForm.tsx  JournalTable.test.tsx  JournalTable.tsx  Nav.tsx  StatTile.tsx  states.tsx
dashboard/src/components/charts/: OfiChart.tsx  VolatilityChart.tsx  VolumeChart.tsx  VwapChart.tsx  common.tsx
dashboard/src/lib/: api.test.ts  api.ts  format.ts  nsjson.test.ts  nsjson.ts  useApi.ts
data/: generate_journal.py  generate_ticks.py  sample_journal.csv  sample_mnq_ticks.csv
engine/: Cargo.toml
engine/src/: main.rs  metrics.rs  ofi.rs  storage.rs  tick.rs
scripts/: demo.sh  verify_pipeline.sh
