[package]
name = "microstructure-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1"
serde = { version = "1", features = ["derive"] }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Casting between numeric types is unavoidable when aggregating tick volumes;
# each cast site is small enough to review by eye.
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
